--- a/index.html
+++ b/index.html
@@ -112,36 +112,38 @@
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-item-text">Product Designer</p>
                         </div>
-                        <ul class="team-item-icon">
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="team-contener-icon">
+                            <ul class="team-item-icon">
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-img" src="./images/img2.jpg" alt="Tom Ford" width="264" height="260">
@@ -149,36 +151,38 @@
                             <h3 class="team-subtitle">Tom Ford</h3>
                             <p class="team-item-text">Frontend Developer</p>
                         </div>
-                        <ul class="team-item-icon">
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="team-contener-icon">
+                            <ul class="team-item-icon">
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-img" src="./images/img1.jpg" alt="Camila Garcia" width="264" height="260">
@@ -186,36 +190,38 @@
                             <h3 class="team-subtitle">Camila Garcia</h3>
                             <p class="team-item-text">Marketing</p>
                         </div>
-                        <ul class="team-item-icon">
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="team-contener-icon">
+                            <ul class="team-item-icon">
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-img" src="./images/img0.jpg" alt="Daniel Wilson" width="264" height="260">
@@ -223,36 +229,38 @@
                             <h3 class="team-subtitle">Daniel Wilson</h3>
                             <p class="team-item-text">UI Designer</p>
                         </div>
-                        <ul class="team-item-icon">
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="team-item-icon-list">
-                                <a href="" class="team-item-link">
-                                    <svg class="team-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="team-contener-icon">
+                            <ul class="team-item-icon">
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-item-icon-list">
+                                    <a href="" class="team-item-link">
+                                        <svg class="team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -362,29 +370,29 @@
             </div>
             <div class="footer-item">
                 <p class="footer-item-text">Social media</p>
-                <ul class="footer-item-icon">
-                    <li>
+                <ul class="footer-item-list-icon">
+                    <li class="footer-item-icon">
                         <a href="" class="footer-item-link">
                             <svg class="footer-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="footer-item-icon">
                         <a href="" class="footer-item-link">
                             <svg class="footer-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="footer-item-icon">
                         <a href="" class="footer-item-link">
                             <svg class="footer-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="footer-item-icon">
                         <a href="" class="footer-item-link">
                             <svg class="footer-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
